# AdblockAndroid

./: .jitpack.yml  README.md  build.gradle.kts  settings.gradle.kts
adblockclient/: CMakeLists.txt  build.gradle.kts  consumer-rules.pro
adblockclient/src/androidTest/java/com/quxer7/adblockclient/: ExampleInstrumentedTest.kt
adblockclient/src/androidTest/java/com/ycngmn/adblockclient/: ExampleInstrumentedTest.kt
adblockclient/src/main/: AndroidManifest.xml
adblockclient/src/main/cpp/: adblockclient-lib.cpp
adblockclient/src/main/java/com/quxer7/adblockclient/: AdBlockClient.kt  Client.kt  MatchResult.kt  ResourceType.kt
adblockclient/src/main/java/com/ycngmn/adblockclient/: AdBlockClient.kt  Client.kt  MatchResult.kt  ResourceType.kt
adblockclient/src/main/res/values/: strings.xml
adblockclient/src/test/java/com/quxer7/adblockclient/: ExampleUnitTest.kt
adblockclient/src/test/java/com/ycngmn/adblockclient/: ExampleUnitTest.kt
adfilter/: build.gradle.kts  consumer-rules.pro
adfilter/src/androidTest/java/com/quxer7/adfilter/: ExampleInstrumentedTest.kt
adfilter/src/androidTest/java/com/ycngmn/adfilter/: ExampleInstrumentedTest.kt
adfilter/src/main/java/com/quxer7/adfilter/: AdFilter.kt  CustomFilter.kt  Filter.kt  FilterResult.kt  FilterViewModel.kt
adfilter/src/main/res/values/: strings.xml  themes.xml
adfilter/src/main/res/values-night/: themes.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+56 files in other folders)
